fix scroll white space

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -1,14 +1,25 @@
 html {
   font-size: 16px;
   color: $blue-200;
-  font-family: 'Avenir Next', 'Yantramanav', 'Noto Sans JP', 'Helvetica', Arial, 'Microsoft Yahei';
+  font-family: 'Avenir Next', 'Yantramanav', 'Noto Sans JP', 'Helvetica', Arial,
+    'Microsoft Yahei';
+  // delete this after vuetify deleted
+  overflow-x: inherit !important;
 }
 
 html,
 body {
-  overscroll-behavior: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
-
+body {
+  overflow: hidden;
+}
+#__nuxt {
+  height: 100%;
+  overflow-y: auto;
+}
 
 // text formats
 h1 {
@@ -189,11 +200,11 @@ h5 {
 }
 
 .mr25 {
-  margin-right: 25px
+  margin-right: 25px;
 }
 
 .mr30 {
-  margin-right: 30px
+  margin-right: 30px;
 }
 
 .mr40 {
@@ -288,7 +299,6 @@ h5 {
 .pr20 {
   padding-right: 20px;
 }
-
 
 //centering
 .vh_center {
